# timenote

./: .gitignore  .ignore  .prettierrc  AGENTS.md  Makefile  README.md  cspell.json  deploy.sh.template  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  wrangler.jsonc
.opencode/: opencode.json
.opencode/commands/: git-commit-staged.md  refactor.md
app/: app.css  root.tsx  routes.ts
app/components/: note-tags-view.tsx  notebook-sidebar.tsx  page-header.tsx  sync-actions.tsx  theme-provider.tsx
app/hooks/: use-local-storage.ts  use-pwa.ts
app/lib/: constants.ts  db.ts  types.ts
app/routes/: about.tsx  api.fs.ts  blog-post.tsx  blog.tsx  contact.tsx  dashboard-home.tsx  dashboard.tsx  home.tsx  landing.tsx  manifest.tsx  markdown-playground.tsx  note-detail.tsx  notebook-detail.tsx  notebook-layout.tsx  notebook-notedetail.tsx  notebook-notes.tsx  notebook-settings.tsx  notebook-timeline.tsx  notebook.tsx  notebooks.tsx  profile.tsx  settings.tsx  tags.tsx
app/services/: fs-client.ts
apps/cli/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: fs_commands.rs  lib.rs  main.rs  window_commands.rs
docs/: design-web-extension.md  features.md  general-design.md  ideas.md  refactor-web-extension.md  tailwind-monorepo.md  vault-spec.md
(+147 files in other folders)
