[package]
name = "timenote-desktop"
version = "1.0.0"
description = "TimeNote Desktop"
authors = ["linchen"]
edition = "2021"

[lib]
name = "timenote_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
